--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 [ ] frameless: gracious handle of max windows reached
 [ ] frameless: dynamic allocation of more xwins
 [ ] frameless: enable -Wconversion and fix
+[ ] gtk.css: export GTK_DEBUG=interactive
 --------------------------------------------------------------
 [x] frameless: consolidate xwin.vh and bits into one field
