--- a/todo.txt
+++ b/todo.txt
@@ -4,5 +4,6 @@
 [ ] gtk.css: export GTK_DEBUG=interactive
 [ ] clonky: throttle percentage display not same as in htop
 [ ] clonky: net up/down in KB/s instead of total
+[ ] frameless: clang compile fix -Wno-sign-conversion
 --------------------------------------------------------------
 [x] frameless: consolidate xwin.vh and bits into one field
