--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
 [ ] frameless: gracious handle of max windows reached
 [ ] frameless: dynamic allocation of more xwins
 [ ] clonky: throttle percentage display not same as in htop
-[ ] clonky: net up/down in KB/s instead of total
+[x] clonky: net up/down in KB/s instead of total
+[ ] clonky: e.g. 1.3 MB instead of truncated to 1 MB
 [ ] frameless: clang compile fix -Wno-sign-conversion
 [ ] frameless: remember focused window on each desk
 [ ] gtk.css: export GTK_DEBUG=interactive
