--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,6 @@
 [ ] frameless: gracious handle of max windows reached
 [ ] frameless: dynamic allocation of more xwins
 [ ] clonky: throttle percentage display not same as in htop
-[ ] clonky: render_io_stat: re-write considering loop devices
 [ ] clonky: e.g. 1.3 MB instead of truncated to 1 MB
 [ ] frameless: clang compile fix -Wno-sign-conversion
 [ ] frameless: remember focused window on each desk
@@ -17,5 +16,6 @@
 [ ]     stickyo
 [ ] clang-tidy: maxed
 --------------------------------------------------------------
+[x] clonky: render_io_stat: re-write considering loop devices
 [x] clonky: net up/down in KB/s instead of total
 [x] frameless: consolidate xwin.vh and bits into one field
