--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
 [ ] frameless: gracious handle of max windows reached
 [ ] frameless: dynamic allocation of more xwins
 [ ] clonky: throttle percentage display not same as in htop
-[ ] clonky: e.g. 1.3 MB instead of truncated to 1 MB
-[ ] frameless: clang compile fix -Wno-sign-conversion
+[ ] clonky: throttle line breaks after every 4 cpu
+[ ] clonky: e.g. 1.3 MB instead of truncated to 1 MBn
 [ ] frameless: remember focused window on each desk
 [ ] stickyo: upgrade to gtk4
 [ ] frameless: "scrot -s" to select screenshot area
@@ -16,6 +16,7 @@
 [ ]     stickyo
 [ ] clang-tidy: maxed
 --------------------------------------------------------------
+[x] frameless: clang compile fix -Wno-sign-conversion
 [x] clonky: render_io_stat: re-write considering loop devices
 [x] clonky: net up/down in KB/s instead of total
 [x] frameless: consolidate xwin.vh and bits into one field
