--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,12 @@
 [ ] frameless: gracious handle of max windows reached
 [ ] frameless: dynamic allocation of more xwins
+[ ] frameless: review the somewhat messy state managing of focused windows
+    and desktop changes
 [ ] clonky: throttle percentage display not same as in htop
-[ ] clonky: throttle line breaks after every 4 cpu
+[x] clonky: throttle line breaks after every 4 cpu
+    => 5 fit in default width
 [ ] clonky: e.g. 1.3 MB instead of truncated to 1 MBn
-[ ] frameless: remember focused window on each desk
+[x] frameless: remember focused window on each desk
 [ ] stickyo: upgrade to gtk4
 [ ] frameless: "scrot -s" to select screenshot area
 [ ] clonky: unit/s to use specified dt instead of assuming 1s
