--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,6 @@
 [ ] frameless: gracious handle of max windows reached
 [ ] frameless: dynamic allocation of more xwins
-[ ] frameless: review the somewhat messy state managing of focused windows
-    and desktop changes
-[ ] clonky: throttle percentage display not same as in htop
-[x] clonky: throttle line breaks after every 4 cpu
-    => 5 fit in default width
 [ ] clonky: e.g. 1.3 MB instead of truncated to 1 MBn
-[x] frameless: remember focused window on each desk
 [ ] stickyo: upgrade to gtk4
 [ ] frameless: "scrot -s" to select screenshot area
 [ ] clonky: unit/s to use specified dt instead of assuming 1s
@@ -19,6 +13,14 @@
 [ ]     stickyo
 [ ] clang-tidy: maxed
 --------------------------------------------------------------
+[x] frameless: remember focused window on each desk
+[x] frameless: review the somewhat messy state managing of focused windows
+    and desktop changes
+    => moved state handling from xwin_* to standalone functions
+[x] clonky: throttle percentage display not same as in htop
+    => throttle is the cpu frequency over max frequency, not cpu usage
+[x] clonky: throttle line breaks after every 4 cpu
+    => 5 fit in default width
 [x] frameless: clang compile fix -Wno-sign-conversion
 [x] clonky: render_io_stat: re-write considering loop devices
 [x] clonky: net up/down in KB/s instead of total
