--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,9 @@
 [ ] frameless: gracious handle of max windows reached
 [ ] frameless: dynamic allocation of more xwins
+[ ] frameless: capture button 3 and swipe up / down motion to switch desktop
+[ ] frameless: capture button 3 and swipe left / right motion to switch focus
+[ ] frameless: when closing window and no more focused windows on desk then 
+    focus on window under pointer
 [ ] clonky: e.g. 1.3 MB instead of truncated to 1 MBn
 [ ] stickyo: upgrade to gtk4
 [ ] frameless: "scrot -s" to select screenshot area
