--- a/todo.txt
+++ b/todo.txt
@@ -2,9 +2,10 @@
 [ ] frameless: dynamic allocation of more xwins
 [ ] frameless: capture button 3 and swipe up / down motion to switch desktop
 [ ] frameless: capture button 3 and swipe left / right motion to switch focus
-[ ] frameless: when closing window and no more focused windows on desk then 
-    focus on window under pointer
-[ ] clonky: e.g. 1.3 MB instead of truncated to 1 MBn
+[ ] frameless: when closing window and no focused windows on desk then focus
+    on window under pointer
+[ ] frameless: debugging turned on with FRAMELESS_DEBUG define
+[ ] clonky: e.g. 1.3 MB instead of truncated to 1 MB
 [ ] stickyo: upgrade to gtk4
 [ ] frameless: "scrot -s" to select screenshot area
 [ ] clonky: unit/s to use specified dt instead of assuming 1s
