--- a/todo.txt
+++ b/todo.txt
@@ -5,9 +5,8 @@
 [ ] frameless: when closing window and no focused windows on desk then focus
     on window under pointer
 [ ] frameless: resizing while entering a different window
-[ ] frameless: debugging turned on with FRAMELESS_DEBUG define
+[x] frameless: debugging turned on with FRAMELESS_DEBUG define
 [ ] clonky: e.g. 1.3 MB instead of truncated to 1 MB
-[ ] stickyo: upgrade to gtk4
 [ ] frameless: "scrot -s" to select screenshot area
 [ ] clonky: unit/s to use specified dt instead of assuming 1s
 [ ] gtk.css: export GTK_DEBUG=interactive
@@ -24,6 +23,8 @@
 [x]     snap
 [ ]     stickyo
 [ ] clang-tidy: maxed
+[ ] stickyo save and remember state of stickies
+[ ] stickyo: upgrade to gtk4
 --------------------------------------------------------------
 [x] frameless: remember focused window on each desk
 [x] frameless: review the somewhat messy state managing of focused windows
