--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,7 @@
 [x] frameless: debugging turned on with FRAMELESS_DEBUG define
 [ ] clonky: e.g. 1.3 MB instead of truncated to 1 MB
 [ ] frameless: "scrot -s" to select screenshot area
+[ ] clonky: display IP addresses
 [ ] clonky: unit/s to use specified dt instead of assuming 1s
 [ ] gtk.css: export GTK_DEBUG=interactive
 [ ] clonky: valgrind
