--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,6 @@
 [ ] frameless: capture button 3 and swipe left / right motion to switch focus
 [ ] stickyo save and remember state of stickies
 [ ] review menuq code
-[ ] review stickyo code
 [ ] review mounte code
 [ ] clonky: e.g. 1.3 MB instead of truncated to 1 MB
 [ ] clonky: unit/s to use specified dt instead of assuming 1s
@@ -26,6 +25,7 @@
 [ ]     stickyo
 [ ] clang-tidy: maxed
 --------------------------------------------------------------
+[x] review stickyo code
 [x] frameless: resizing while entering a different window
 [x] frameless: new window does not focus when pointer is in youtube screen area
 [x] frameless: "scrot -s" to select screenshot area
