--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,3 @@
-[ ] frameless: when closing window and no focused windows on desk then focus
-    on window under pointer
 [ ] frameless: gracious handle of max windows reached
 [ ] frameless: dynamic allocation of more xwins
 [ ] frameless: capture XF86... keys
@@ -25,6 +23,8 @@
 [ ]     stickyo
 [ ] clang-tidy: maxed
 --------------------------------------------------------------
+[x] frameless: when closing window and no focused windows on desk then focus
+    on window under pointer
 [x] review stickyo code
 [x] frameless: resizing while entering a different window
 [x] frameless: new window does not focus when pointer is in youtube screen area
