--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,10 @@
+[ ] osca: xii volume and screen brightness controls
 [ ] frameless: gracious handle of max windows reached
 [ ] frameless: dynamic allocation of more xwins
 [ ] frameless: capture XF86... keys
+[ ] stickyo save and remember state of stickies
 [ ] frameless: capture button 3 and swipe up / down motion to switch desktop
 [ ] frameless: capture button 3 and swipe left / right motion to switch focus
-[ ] stickyo save and remember state of stickies
 [ ] review menuq code
 [ ] review mounte code
 [ ] clonky: e.g. 1.3 MB instead of truncated to 1 MB
