--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-[ ] clonky: display connection quality and network name for wireless devices
+[x] clonky: display connection quality and network name for wireless devices
     :: iw dev wlan0 link
     Connected to 38:d5:47:40:99:d0 (on wlan0)
             SSID: AC51
