--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,3 @@
-[x] clonky: display connection quality and network name for wireless devices
-    :: iw dev wlan0 link
-    Connected to 38:d5:47:40:99:d0 (on wlan0)
-            SSID: AC51
-            freq: 2467.0
-            RX: 311025979 bytes (260365 packets)
-            TX: 16520134 bytes (97826 packets)
-            signal: -66 dBm
-            rx bitrate: 117.0 MBit/s MCS 14
-            tx bitrate: 144.4 MBit/s MCS 15 short GI
-            bss flags: short-slot-time
-            dtim period: 1
-            beacon int: 100
 [ ] frameless: encapsulate handling of field 'bits' in xin_.... functions
 [ ] clonky: e.g. 1.3 MB instead of truncated to 1 MB
 [ ] clonky: unit/s to use specified dt instead of assuming 1s
@@ -38,6 +25,20 @@
 [ ] clang-tidy: maxed
 [ ] frameless: different shades on desktop depending on id
 --------------------------------------------------------------
+[x] remove obsoleted mounte
+[x] clonky: display connection quality and network name for wireless devices
+    :: iw dev wlan0 link
+    Connected to 38:d5:47:40:99:d0 (on wlan0)
+            SSID: AC51
+            freq: 2467.0
+            RX: 311025979 bytes (260365 packets)
+            TX: 16520134 bytes (97826 packets)
+            signal: -66 dBm
+            rx bitrate: 117.0 MBit/s MCS 14
+            tx bitrate: 144.4 MBit/s MCS 15 short GI
+            bss flags: short-slot-time
+            dtim period: 1
+            beacon int: 100
 [x] frameless: consider hiding windows from other desktops instead of "folding"
     them to the right
     => WIN_SLIP_DX and WIN_SLIP set to 0
