--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 [ ] clonky: correct rounding at divisions
+[x]   strb_p_nbytes
 [ ] clonky: e.g. 1.3 MB instead of truncated to 1 MB
 [ ] clonky: unit/s to use specified dt instead of assuming 1s
 [ ] frameless: gracious handle of max windows reached
