--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 [ ] clonky: correct rounding at divisions
 [x]   strb_p_nbytes
-[ ] clonky: consider using #include <stdint.h>
+[x] clonky: consider using #include <stdint.h>
 [ ] clonky: e.g. 1.3 MB instead of truncated to 1 MB
 [ ] clonky: unit/s to use specified dt instead of assuming 1s
 [ ] frameless: gracious handle of max windows reached
