--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-[ ] frameless: when a window is de-maximized ignore focus switch to keep
+[x] frameless: when a window is de-maximized ignore focus switch to keep
     current window in focus
 [ ] clonky: separate config files that depend on screen resolutions from common
     settings
